--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,6 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-$primary: green;
+// $primary: green;
 
-body {
-    color: $primary;
-}
+// body {
+//     color: $primary;
+// }
